force-app/main/default/objects/RegistroRepositorio__c/RegistroRepositorio__c.object-meta.xml
<CustomObject>
    <description>Registro técnico organizado por cliente, projeto e tipo de conteúdo.</description>
    <label>Registro Repositório</label>
    <nameField>
        <label>Título</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registros Repositório</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>