force-app/main/default/objects/RegistroRepositorio__c/fields/Ambiente__c.field-meta.xml
<CustomField>
    <fullName>Ambiente__c</fullName>
    <label>Ambiente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>HM</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
            <value>
                <fullName>Todos</fullName>
            </value>
            <value>
                <fullName>HM/PROD</fullName>
            </value>
            <value>
                <fullName>DEV/HM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>