force-app/main/default/objects/RegistroRepositorio__c/fields/CausaProvavel__c.field-meta.xml
<CustomField>
    <fullName>CausaProvavel__c</fullName>
    <label>Causa provável</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>