force-app/main/default/objects/RegistroRepositorio__c/fields/ClasseOuFlow__c.field-meta.xml
<CustomField>
    <fullName>ClasseOuFlow__c</fullName>
    <label>Classe/Flow/Componente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>