force-app/main/default/objects/RegistroRepositorio__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>ClienteRepositorio__c</referenceTo>
    <relationshipLabel>Registros Repositório</relationshipLabel>
    <relationshipName>RegistrosRepositorio</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>