force-app/main/default/objects/RegistroRepositorio__c/fields/ComoInterpretar__c.field-meta.xml
<CustomField>
    <fullName>ComoInterpretar__c</fullName>
    <label>Como interpretar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>