force-app/main/default/objects/RegistroRepositorio__c/fields/ComoInvestigar__c.field-meta.xml
<CustomField>
    <fullName>ComoInvestigar__c</fullName>
    <label>Como investigar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>