force-app/main/default/objects/RegistroRepositorio__c/fields/ComoResolver__c.field-meta.xml
<CustomField>
    <fullName>ComoResolver__c</fullName>
    <label>Como resolver</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>