force-app/main/default/objects/RegistroRepositorio__c/fields/ComoValidar__c.field-meta.xml
<CustomField>
    <fullName>ComoValidar__c</fullName>
    <label>Como validar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>