force-app/main/default/objects/RegistroRepositorio__c/fields/Criticidade__c.field-meta.xml
<CustomField>
    <fullName>Criticidade__c</fullName>
    <label>Criticidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixa</fullName>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Crítica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>