force-app/main/default/objects/RegistroRepositorio__c/fields/Cuidados__c.field-meta.xml
<CustomField>
    <fullName>Cuidados__c</fullName>
    <label>Cuidados</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>