force-app/main/default/objects/RegistroRepositorio__c/fields/ExigeAprovacao__c.field-meta.xml
<CustomField>
    <fullName>ExigeAprovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exige aprovação</label>
    <type>Checkbox</type>
</CustomField>