force-app/main/default/objects/RegistroRepositorio__c/fields/ExigeBackup__c.field-meta.xml
<CustomField>
    <fullName>ExigeBackup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exige backup</label>
    <type>Checkbox</type>
</CustomField>