force-app/main/default/objects/RegistroRepositorio__c/fields/MensagemErro__c.field-meta.xml
<CustomField>
    <fullName>MensagemErro__c</fullName>
    <label>Mensagem do erro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>