force-app/main/default/objects/RegistroRepositorio__c/fields/ObjetoSalesforce__c.field-meta.xml
<CustomField>
    <fullName>ObjetoSalesforce__c</fullName>
    <label>Objeto Salesforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>