force-app/main/default/objects/RegistroRepositorio__c/fields/OndeAcontece__c.field-meta.xml
<CustomField>
    <fullName>OndeAcontece__c</fullName>
    <label>Onde acontece</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>