force-app/main/default/objects/RegistroRepositorio__c/fields/Parametros__c.field-meta.xml
<CustomField>
    <fullName>Parametros__c</fullName>
    <label>Parâmetros para trocar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>