force-app/main/default/objects/RegistroRepositorio__c/fields/Passos__c.field-meta.xml
<CustomField>
    <fullName>Passos__c</fullName>
    <label>Passos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>