force-app/main/default/objects/RegistroRepositorio__c/fields/PreRequisitos__c.field-meta.xml
<CustomField>
    <fullName>PreRequisitos__c</fullName>
    <label>Pré-requisitos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>