force-app/main/default/objects/RegistroRepositorio__c/fields/Projeto__c.field-meta.xml
<CustomField>
    <fullName>Projeto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Projeto</label>
    <referenceTo>ProjetoRepositorio__c</referenceTo>
    <relationshipLabel>Registros Repositório</relationshipLabel>
    <relationshipName>RegistrosRepositorio</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>