force-app/main/default/objects/RegistroRepositorio__c/fields/QuandoUsar__c.field-meta.xml
<CustomField>
    <fullName>QuandoUsar__c</fullName>
    <label>Quando usar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>