force-app/main/default/objects/RegistroRepositorio__c/fields/QuerySOQL__c.field-meta.xml
<CustomField>
    <fullName>QuerySOQL__c</fullName>
    <label>Query SOQL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>