force-app/main/default/objects/RegistroRepositorio__c/fields/Resumo__c.field-meta.xml
<CustomField>
    <fullName>Resumo__c</fullName>
    <label>Resumo</label>
    <type>TextArea</type>
</CustomField>