force-app/main/default/objects/RegistroRepositorio__c/fields/Risco__c.field-meta.xml
<CustomField>
    <fullName>Risco__c</fullName>
    <label>Risco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixo</fullName>
            </value>
            <value>
                <fullName>Médio</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>