force-app/main/default/objects/RegistroRepositorio__c/fields/Rollback__c.field-meta.xml
<CustomField>
    <fullName>Rollback__c</fullName>
    <label>Rollback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>