force-app/main/default/objects/RegistroRepositorio__c/fields/ScriptApex__c.field-meta.xml
<CustomField>
    <fullName>ScriptApex__c</fullName>
    <label>Script Apex</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>