force-app/main/default/objects/RegistroRepositorio__c/fields/Sintoma__c.field-meta.xml
<CustomField>
    <fullName>Sintoma__c</fullName>
    <label>Sintoma</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>