force-app/main/default/objects/RegistroRepositorio__c/fields/SolucaoConhecida__c.field-meta.xml
<CustomField>
    <fullName>SolucaoConhecida__c</fullName>
    <label>Solução conhecida</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>