force-app/main/default/objects/RegistroRepositorio__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caso recorrente</fullName>
            </value>
            <value>
                <fullName>Query SOQL</fullName>
            </value>
            <value>
                <fullName>Script Anonymous Apex</fullName>
            </value>
            <value>
                <fullName>Erro conhecido</fullName>
            </value>
            <value>
                <fullName>Procedimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>